--- a/lab4/makefile
+++ b/lab4/makefile
@@ -1,6 +1,12 @@
 # Grace Sobrinski, tuk01723, TUID: 915693998
-# 3207 Project 3
+# 3207 Project 4
 # Section 004
+
+all: p1 p2
 
 p1: p1.c
 	gcc -o p1 p1.c -pthread 
+
+p2: p2.c
+	gcc -o p2 p2.c -pthread 
+
